# unnamed-artnet-orion-vrsl-app

./: .gitmodules  Cargo.toml  flake.nix
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: app.rs  artnet.rs  degree.rs  fixturestore.rs  macro.rs  main.rs  u9.rs
app/src/app/: common_data.rs  debug.rs  message.rs  mode.rs  popup.rs  storage.rs
app/src/app/mode/: channels.rs  fixtures.rs  settings.rs  todo.rs
app/src/artnet/: channel.rs  fixture.rs  universe.rs
app/src/artnet/fixture/: channel.rs  variables.rs
docs/: Readme.md
