

[workspace]
members = [
    "app"
]
resolver = "2"

[profile.release]
#strip = true
#lto = true
#opt-level = 3
#codegen-units = 1

[patch.crates-io]
#egui_tracing = { git = "https://github.com/zakarumych/egui_tracing.git", rev = "87ff66d75a47c1d372806f7d1c5fd60d986ba06b"}
egui_node_graph = { git = "https://github.com/C0D3-M4513R/egui_node_graph.git", rev = "829f6fdaf6e263f4ac3d36d84b666b512e9b5d0d"}