[package]
name = "unnamed_artnet_club_orion_vrsl_app"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gui stuff
rfd = {version = "0.13", optional = true}
egui_tracing = { version = "0.2.1", optional = true }
egui_node_graph = "0.4"
egui_extras = "0.25"
egui = "0.25"
eframe = { version = "0.25", default-features = false, features = [
    #    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
#Logging
log = "0.4.19"
tracing-subscriber = "0.3"
tracing-core = "0.1"
#Persistant data storage
serde_derive = "1"
serde = "1"
#async driver
tokio = { version = "1", features = ["full"] }
futures = "0.3"
#artnet
artnet_protocol = "0.4"

[features]
egui_tracing = ["dep:egui_tracing"]