[package]
name = "unnamed_artnet_club_orion_vrsl_app"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gui stuff
rfd = "0.13"
egui_node_graph = "0.4"
egui_extras = "0.25"
egui = "0.25"
eframe = { version = "0.25", default-features = false, features = [
    #    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
#Logging
log = "0.4"
simple_logger = { version = "4", optional = true }
puffin = {version = "0.19.0", optional = true}
puffin_egui = { version = "0.25.0", optional = true }
#Persistant data storage
serde_derive = "1"
serde = "1"
ron = "0.8"
#async driver
tokio = { version = "1", features = ["full"] }
futures = "0.3"
#artnet
artnet_protocol = "0.4"
#misc
once_cell = "1"
thiserror = "1"
dashmap = { version = "5", features = ["serde", "rayon", "inline"] }
ux2 = { version = "0.8.6", features = ["serde", "16", "emath_0_25"] }
#/*version = "0.8"*/

[features]
default = ["simple_logger", "egui_log"]
simple_logger = ["dep:simple_logger"]
deadlock_detection = ["egui/deadlock_detection"]
puffin = ["egui/puffin", "egui_extras/puffin", "dep:puffin", "dep:puffin_egui"]
egui_log = ["egui/log"]